fixed overflow problems

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -16,11 +16,9 @@ html {
 }
 
 .App {
-  background: $primary-background;
   width: 100%;
-  height: 100%;
+  height: auto;
   color: $primary-text-color;
-  overflow: auto;
 
   @media screen and (orientation: landscape) and (max-width: 850px) {
     height: fit-content;
