--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,4 +1,5 @@
 @import './styles/typography.scss';
+@import './styles/color-palette.scss';
 
 body {
   margin: 0;
@@ -7,12 +8,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 #root {
   width: 100%;
-  height: 100%;
+  background: $primary-background;
+  height: auto;
 }
 
 code {
